--- a/src/scss/_ourservices.scss
+++ b/src/scss/_ourservices.scss
@@ -6,7 +6,7 @@
   width: 100%;
 
   .int {
-    span {
+    .int_main {
       top: 35%;
     }
   }
